fix icon spacing problem, strange math?

--- a/kml.css
+++ b/kml.css
@@ -321,7 +321,7 @@ b {
 
 .icon {
 	width: 17%;
-	margin: 2% 8%;
+	margin: 2% 7%;
 	display: inline-block;
 	text-align: center;
 }
